@@ -1,8 +1,18 @@
 # ContactsApp
+###### By Jawad Haider
 # Instructions
 13.4 (Contacts App) Create a Contacts app modeled after the Cover Viewer app (Sections 13.5 –13.6). Store the contact information in an ObservableList of Contact objects. A Contact should contain first name, last name, email and phone number properties (you can provide others).
 When the user selects a contact from the contacts list, its information should display in a Grid of TextFields. As the information is modified (a Contact’s data is updated, a new Contact is added or an existing Contact is deleted), the contacts ListView should display the updates.
 The ListView should display the Contact’s last names.
+
+## Software Requirements:
+1. Scene Builder installation
+[Official site](https://gluonhq.com/products/scene-builder/) to download Scene Builder.
+
+2. [Official site](https://openjfx.io/) of JavaFX where you can find official documentation as well as download links.
+Step-by-step [instructions] (https://openjfx.io/openjfx-docs/) on how to install and run JavaFX applications.
+
+=> --module-path ${PATH_TO_JAVAFX} --add-modules javafx.controls,javafx.fxml
 
 # ScreenShots
 ![](img/Screenshot%20from%202020-12-22%2008-40-15.png)
